--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/router": "~9.0.7",
     "@popperjs/core": "^2.4.4",
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "fas": "^0.3.6",
     "jquery": "^3.5.1",
     "mapbox-gl": "^1.11.0",
+    "ng2-charts": "^2.3.2",
     "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
