--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mapbox-gl": "^1.11.0",
     "ng2-charts": "^2.3.2",
     "rxjs": "^6.5.5",
+    "sweetalert2": "^9.15.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
